<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/_8sdp"
    tools:context=".ui.fragments.ExpenseListFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:background="@drawable/bg_search_view"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/expenseListHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/bg_expense_list_header"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/searchView">

        <TextView
            android:id="@+id/createdLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/created"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/typeLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/type"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amountLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expenseRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/bg_outline_primary_color"
        app:layout_constraintBottom_toTopOf="@id/totalSpendingContainer"
        app:layout_constraintTop_toBottomOf="@id/expenseListHeader" />

    <LinearLayout
        android:id="@+id/totalSpendingContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expenseRecyclerView">

        <TextView
            android:id="@+id/totalSpendingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="5"
            android:text="Total spending: "
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalSpending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:text="10000000000"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iconDollar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/ic_dollar" />
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@id/adPlaceHolder">

        <ImageView
            android:id="@+id/exportToExcel"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/ic_excel" />

        <ImageView
            android:id="@+id/syncToGoogleSheet"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/_20sdp"
            android:src="@drawable/ic_sync" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addExpenseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:src="@drawable/ic_add"
            app:tint="@color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/adPlaceHolder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:background="@drawable/bg_outline_primary_color"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="This is for advertising" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>